--- a/apps/playground/public/index.html
+++ b/apps/playground/public/index.html
@@ -1,39 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>API Playground</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <nav class="container">
-    <ul>
-      <li><strong>API Playground</strong></li>
-    </ul>
-    <ul>
-      <li><a href="http://localhost:3000" target="_blank">Blog</a></li>
-      <li><a href="http://localhost:3001" target="_blank">API</a></li>
-    </ul>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>API Playground</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <nav class="container">
+      <ul>
+        <li><strong>API Playground</strong></li>
+      </ul>
+      <ul>
+        <li><a href="http://localhost:3000" target="_blank">Blog</a></li>
+        <li><a href="http://localhost:3001" target="_blank">API</a></li>
+      </ul>
+    </nav>
 
-  <main class="container">
-    <header>
-      <h1>Interactive API Tools</h1>
-      <p>Test and interact with various API endpoints using these interactive tools.</p>
-    </header>
+    <main class="container">
+      <header>
+        <h1>Interactive API Tools</h1>
+        <p>
+          Test and interact with various API endpoints using these interactive
+          tools.
+        </p>
+      </header>
 
-    <div id="tools-container"></div>
-  </main>
+      <div id="tools-container"></div>
+    </main>
 
-  <footer class="container">
-    <small>
-      © 2024 dunamismax. Built with 
-      <a href="https://github.com/dunamismax/JS-Monolith" target="_blank">JS-Monolith</a>
-    </small>
-  </footer>
+    <footer class="container">
+      <small>
+        © 2024 dunamismax. Built with
+        <a href="https://github.com/dunamismax/js-monolith" target="_blank"
+          >js-monolith</a
+        >
+      </small>
+    </footer>
 
-  <script src="js/bundle.js"></script>
-</body>
+    <script src="js/bundle.js"></script>
+  </body>
 </html>
